--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "clean": "rm -rf ./dist",
     "build": "tsc",
     "build:clean": "npm run clean && npm run build",
-    "prepublish": "npm run build:clean",
+    "prepublishOnly": "npm run build:clean",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
