--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,10 +3,11 @@
       "module": "commonjs",
       "allowSyntheticDefaultImports": true,
       "target": "es6",
-      "noImplicitAny": false,
+      "noImplicitAny": true,
       "declaration": true,
       "outDir": "dist",
       "baseUrl": ".",
+      "strict": true,
       "paths": {
         "*": [
           "node_modules/*",
