--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "telegraf-session-mongodb",
+  "name": "@aggtaa/telegraf-session-mongodb",
   "version": "2.1.0",
   "description": "MongoDB session middleware for Telegraf",
   "main": "dist/index.js",
@@ -8,12 +8,11 @@
     "clean": "rm -rf ./dist",
     "build": "tsc",
     "build:clean": "npm run clean && npm run build",
-    "prepublishOnly": "npm run build:clean",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublishOnly": "npm run build:clean"
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/alexnzarov/telegraf-session-mongodb.git"
+    "url": "git+ssh://git@github.com/aggtaa/telegraf-session-mongodb.git"
   },
   "keywords": [
     "telegraf",
@@ -25,14 +24,14 @@
     "bot"
   ],
   "author": {
-    "name": "alexnzarov",
-    "email": "alexnzarov@gmail.com"
+    "name": "aggtaa",
+    "email": "azykov@mail.ru"
   },
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/alexnzarov/telegraf-session-mongodb/issues"
+    "url": "https://github.com/aggtaa/telegraf-session-mongodb/issues"
   },
-  "homepage": "https://github.com/alexnzarov/telegraf-session-mongodb#readme",
+  "homepage": "https://github.com/aggtaa/telegraf-session-mongodb#readme",
   "dependencies": {
     "mongodb": "^3.6.4"
   },
