--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@aggtaa/telegraf-session-mongodb",
+  "name": "telegraf-session-mongo",
   "version": "2.1.0",
   "description": "MongoDB session middleware for Telegraf",
   "main": "dist/index.js",
@@ -33,10 +33,9 @@
   },
   "homepage": "https://github.com/aggtaa/telegraf-session-mongodb#readme",
   "dependencies": {
-    "mongodb": "^3.6.4"
+    "mongodb": "4.1.1"
   },
   "devDependencies": {
-    "@types/mongodb": "^3.6.8",
     "telegraf": "^4.1.1",
     "typescript": "^4.2.2"
   }
