--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "telegraf-session-mongo",
-  "version": "2.1.0",
+  "version": "2.1.1",
   "description": "MongoDB session middleware for Telegraf",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -33,9 +33,11 @@
   },
   "homepage": "https://github.com/aggtaa/telegraf-session-mongodb#readme",
   "dependencies": {
+    "debug": "^4.3.2",
     "mongodb": "4.1.1"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.7",
     "telegraf": "^4.1.1",
     "typescript": "^4.2.2"
   }
